added author jan

--- a/paper.tex
+++ b/paper.tex
@@ -10,6 +10,9 @@
 Jakub Marou\v sek
        \email{jakub.marousek@gmail.com}%
 % put your details here
+\alignauthor
+Jan Ivanjko
+	\email{ji4988@student.uni-lj.si}%
 }
 
 \maketitle
