added author Jernej

--- a/paper.tex
+++ b/paper.tex
@@ -14,6 +14,9 @@ Jakub Marou\v sek
 Jan Ivanjko
 	\email{ji4988@student.uni-lj.si}%
 }
+Jernej Katanec
+	\email{jk6071@student.uni-lj.si}%
+}
 
 \maketitle
 \begin{abstract}
