added author Jernej

--- a/paper.tex
+++ b/paper.tex
@@ -13,7 +13,8 @@ Jakub Marou\v sek
 \alignauthor
 Jan Ivanjko
 	\email{ji4988@student.uni-lj.si}%
-}
+
+\alignauthor
 Jernej Katanec
 	\email{jk6071@student.uni-lj.si}%
 }
