just some unfinished content

--- a/paper.bib
+++ b/paper.bib
@@ -51,6 +51,14 @@
 	PUBLISHER = "John Wiley and Sons",
 	ADDRESS = "New York",
 	YEAR = "1978"	}
+	
+@article{merola2008data,
+  title={Data carving concepts},
+  author={Merola, Antonio},
+  journal={Sans Institute},
+  volume={4},
+  year={2008}
+}
 
 
 
