Ext4 description: text and images

--- a/paper.bib
+++ b/paper.bib
@@ -1,59 +1,58 @@
-@ARTICLE{bowman:reasoning,
-	AUTHOR = "Mic Bowman and Saumya K. Debray and Larry L. Peterson",
-	TITLE = "Reasoning About Naming Systems",
-	JOURNAL = "ACM Trans. Program. Lang. Syst.",
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {795-825},
-	MONTH = "November",
-	YEAR = {1993}	}
+@article{ext2design,
+author = {Card, Rémy and Ts, Theodore and Tweedie, Stephen},
+year = {1990},
+month = {01},
+pages = {},
+title = {Design and Implementation of the Second Extended Filesystem}
+}
 
-@ARTICLE{braams:babel,
-	AUTHOR = "Johannes Braams",
-	TITLE = "Babel, a Multilingual Style-Option System for Use with LaTeX's Standard Document Styles",
-	JOURNAL = {TUGboat},
-	VOLUME = {12},
-	NUMBER = {2},
-	PAGES = {291-301},
-	MONTH = "June",
-	YEAR = {1991}	}
+@misc{ext2structure,
+  title = {The Second Extended File system (EXT2)},
+  howpublished = {\url{http://www.linux-tutorial.info/modules.php?name=MContent\&pageid=272}},
+  note = {Accessed: 2018-05-10}
+}
 
-@INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March", 
-	YEAR = {1991}	}
+@misc{zfs,
+  title = {What is ZFS?},
+  howpublished = {\url{https://docs.oracle.com/cd/E23823\_01/html/819-5461/zfsover-2.html}},
+  note = {Accessed: 2018-05-11}
+}
 
-@ARTICLE{herlihy:methodology,
-	AUTHOR = "Maurice Herlihy",
-	TITLE = "A Methodology for Implementing Highly Concurrent
-	Data Objects",
-	JOURNAL = {ACM Trans. Program. Lang. Syst.},
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {745-770},
-	MONTH = "November",
-	YEAR = {1993}	}
+@misc{openzfs,
+  title = {OpenZFS Announcement},
+  howpublished = {\url{http://www.open-zfs.org/wiki/Announcement}},
+  note = {Accessed: 2018-05-11}
+}
 
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986"	}
+@article{extjournal,
+author = {C. Tweedie, Stephen},
+year = {1999},
+month = {05},
+pages = {},
+title = {Journaling the Linux ext2fs Filesystem}
+}
 
-@BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
+@article{takingadvantage,
+author = {Gregorio Narváez},
+year = {2007},
+title = {Taking advantage of Ext3 journaling file system in a forensic investigation}
+}
 
+@article{newext4,
+author = {Mathur, Avantika and Cao, Mingming and Bhattacharya, Suparna and Dilger, Andreas and Tomas, Alex and Vivier, Laurent},
+year = {2007},
+month = {01},
+pages = {},
+title = {The new ext4 filesystem: Current status and future plans},
+booktitle = {Proceedings of the Linux Symposium}
+}
 
-
-
-
-
+@article{btrfs,
+author = {Rodeh, Ohad and Bacik, Josef and Mason, Chris},
+year = {2013},
+month = {08},
+pages = {},
+title = {BTRFS: The linux B-tree filesystem},
+volume = {9},
+booktitle = {ACM Transactions on Storage (TOS)}
+}
