--- a/paper.bib
+++ b/paper.bib
@@ -64,3 +64,9 @@ booktitle = {ACM Transactions on Storage (TOS)}
   volume={4},
   year={2008}
 }
+
+@article{afeic,
+author = {A. Dewald and S. Seufert},
+year = {2017},
+title = {AFEIC: Advanced forensic Ext4 inode carving}
+}
