--- a/paper.bib
+++ b/paper.bib
@@ -70,3 +70,27 @@ author = {A. Dewald and S. Seufert},
 year = {2017},
 title = {AFEIC: Advanced forensic Ext4 inode carving}
 }
+@inproceedings{hadi2016reviewing,
+  title={Reviewing and Evaluating Existing File Carving Techniques for JPEG Files},
+  author={Hadi, Ali and others},
+  booktitle={Cybersecurity and Cyberforensics Conference (CCC), 2016},
+  pages={55--59},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{beek2011introduction,
+  title={Introduction to file carving},
+  author={Beek, Christiaan},
+  journal={White paper. McAfee},
+  year={2011}
+}
+@article{dewald2017afeic,
+  title={AFEIC: Advanced forensic Ext4 inode carving},
+  author={Dewald, Andreas and Seufert, Sabine},
+  journal={Digital Investigation},
+  volume={20},
+  pages={S83--S91},
+  year={2017},
+  publisher={Elsevier}
+}
